# VisionHire

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/src/: app.py  config.py  loader.py
backend/src/api/: account.py  auth.py  dashboard.py  errors.py  recruiter.py  routers.py
backend/src/database/: crud.py  db.py  models.py  sqladmin_views.py
backend/src/database/cruds/: director.py  recruiter.py  users.py
backend/src/migrations/: env.py
backend/src/migrations/old_versions/: 0987680ab342_delete_avatar_filename_from_user_model.py  21dd39acd73b_final_version.py  28587c58824e_added_hierarchy.py  616c534beae7_init_db.py  81359903576a_replacing_date_and_time_with_one_column_.py  8cc771045065_renamed_date_to_datetime_in_interview_.py  ab622d6b9e5f_final_version_2.py  e06c72b684e3_changed_the_name_of_the_vacancy_owner_.py
backend/src/migrations/versions/: 5f4337a8c812_final_version.py  8cb01f45a04d_add_role_for_user_model.py  f03ff3a53ca7_init_migrations.py
backend/src/schemas/: auth.py  recruiter.py
backend/src/utils/: __init__.py  fake_data.py  init_db.py  json_custom_encoder.py  mail.py  oauth2_utils.py  sqladmin_auth.py
docs/: POETRY_INSTALL.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Chart.vue  Chart2.vue  Footer.vue  Header.vue  List.vue  Modal.vue
frontend/src/modules/: api.js  auth.js  swal2.js
frontend/src/router/: index.js
frontend/src/store/: index.js  store.js  theme.js
(+24 files in other folders)
